2005-01-31
	* 2.10.0 released

2005-01-26
	* Fix bidding problem that sends esniper to PageReviewBid

2005-01-21
	* handle blank time left field in bid history.  This happens in
	  the last second of an auction

2005-01-19
	* code cleanup thanks to lint and valgrind
	* rewrote bid history parsing to use table parsing code.  This should
	  resolve many little problems with bid history parsing, especially
	  with dutch auctions

2004-12-29
	* recognize AcceptBid_HighBidder_rebid
	* added table parsing
	* added -m option, reads myebay watch list
	* removed us-ascii kludge that knocked off high bit on text

2004-12-19
	* show user's max bid

2004-12-16
	* fixed segfault in http.c
	* don't expose password in log files
	* Use bid password (returned in preBid) instead of user password
	  for bidding.
	* integrated configure patch

2004-12-15
	* 2.9.0Beta released
	* allow use of older versions of libcurl
	* login rewrite
	* bug report generator
	* sort auctions by current status (winning bid already placed goes first)

2004-12-06
	* autotools patch (from hoetzel)

2004-11-25
	* Released 2.9.0Alpha
	* Added libcurl fixes (from bomm)